--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -155,6 +155,14 @@ body {
   cursor: pointer;
 }
 
+.hover-area-below-btns {
+  position: absolute;
+  height: $dist-l;
+  bottom: -$dist-l;
+  width: 100%;
+  background-color: #fff;
+}
+
 .btn-add-child-screen {
   left: 0;
   border-bottom-left-radius: 4px;
